# quantum-random-generator

./: .gitignore  CMakeLists.txt  DataCollector.cpp  DataCollector.hpp  Distribution.cpp  Distribution.hpp  ExponentialDistribution.cpp  ExponentialDistribution.hpp  NormalDistribution.cpp  NormalDistribution.hpp  QuantumRandom.cpp  QuantumRandom.hpp  README.md  RandConfig.h.in  UniformDistribution.cpp  UniformDistribution.hpp  build_project.sh  main.cpp
